# rust-k8s-controller-test

./: Cargo.toml  Dockerfile  README.md  log4rs.yml
example-configurations/: controller.yml  rbac.yml  test-deployment.yml
src/: constants.rs  controller.rs  deployments.rs  lib.rs  main.rs
