[package]
name = "rust-k8s-controller-test"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

#[[bin]]
#doc = false
#name = "crdgen"
#path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.83.0", features = ["runtime", "client", "derive"] }
log = "0.4.18"
log4rs = "1.2.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.40"
openssl = { version = "0.10.54", features = ["vendored"] }
